# forza-abyss-painter

./: .gitignore  CLAUDE.md  ForzaAbyssPainter.spec  README.md  build_exe.bat  pyproject.toml
diagnostics/: probe_gpu_and_runtime.py  run_gpu_smoke.ps1  run_vram_strategy.ps1  vram_profile_smoke.py  vram_strategy_harness.py
docs/: CURSOR_GPU_PROBE.md  CURSOR_GPU_SMOKE_TEST.md  GPU_INSTALL_GUIDE.md  JSON_SPEC.md  MULTISHAPE_FH6_RECON.md  VRAM_MATH_EXPLAINER.md  VRAM_STEP_TRACE_RUN4.md  VRAM_STRATEGY_TEST.md
fd6/: app.py
notebooks/: build_colab_notebook.py  fap_gpu_colab_headshots_700.ipynb  fap_gpu_colab_highres_3000.ipynb  fap_gpu_colab_lineart_400.ipynb  fap_gpu_colab_medium_1000.ipynb  fap_gpu_colab_shapes_highres_3000.ipynb  fap_gpu_colab_shapes_medium_1000.ipynb
tests/: test_apply_upload_cap_override.py  test_brand_banner_badge_path.py  test_build_polish_config.py  test_build_run_config_polish.py  test_chunked_k.py  test_clean_dialog_gui.py  test_cli_generate.py  test_cli_generate_bbox_flags.py  test_cli_refresh.py  test_cli_validate.py  test_diagnostics_bundle.py  test_drop_no_autostart.py  test_engine_seed_canvas_resize.py  test_engine_seed_shapes.py  test_estimate_full_pipeline_gib.py  test_fap_refresh_same_dir_guard.py  test_generate_dialog_checkpoint_spinbox.py  test_generate_dialog_chunked_labels.py  test_generate_dialog_initial_source.py  test_generate_dialog_live_peak_label.py  test_generate_dialog_preflight_wired.py  test_generate_dialog_recommendation_label.py  test_gpu_bundle_gui.py  test_gpu_engine_small.py  test_gpu_first_launch.py  (+55 more)
(+57 files in other folders)
