[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forza_abyss_painter"
version = "1.1.0"
description = "Forza Abyss Painter — image to vinyl-group shapes for Forza Horizon 3-6 + Assetto Corsa Competizione"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
]

[project.scripts]
forza-abyss-painter = "forza_abyss_painter.app:main"
fap-clean = "forza_abyss_painter.cli.clean:main"
fap-diag = "forza_abyss_painter.runtime.diagnostics:main"
fap-generate = "forza_abyss_painter.cli.generate:main"
fap-refresh = "forza_abyss_painter.cli.refresh:main"
fap-validate = "forza_abyss_painter.cli.validate:main"

[tool.setuptools.packages.find]
include = ["forza_abyss_painter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
